Upgrade UI dependencies + scss -> styl

--- a/web/src/views/icon/icon-cell.styl
+++ b/web/src/views/icon/icon-cell.styl
@@ -1,5 +1,5 @@
 
-$icon-preview-size: 50px;
+icon-preview-size = 50px;
 
 .icon-cell {
     height: 100%;
@@ -8,8 +8,8 @@ $icon-preview-size: 50px;
     border-radius: 3px;
     position: relative;
   .icon-preview {
-    width: $icon-preview-size;
-    height: $icon-preview-size;
+    width: icon-preview-size;
+    height: icon-preview-size;
     // background-color: #CCC;
     margin: 0 auto;
     text-align: center;
