--- a/web/src/views/icon/icon-list.styl
+++ b/web/src/views/icon/icon-list.styl
@@ -1,12 +1,12 @@
-$ic-color-text: #455156;
+ic-color-text = #455156;
 
 .top-header {
   position: relative;
   height: 80px;
-  color: $ic-color-text;
+  color: ic-color-text;
 }
 .brand-logo {
-  fill: $ic-color-text;
+  fill: ic-color-text;
 }
 .inner-wrapper {
   height: auto;
@@ -52,7 +52,7 @@ $ic-color-text: #455156;
       height: 42px;
       line-height: 48px;
       padding: 0 20px 0 40px;
-      color: $ic-color-text;
+      color: ic-color-text;
       margin-top: 15px;
       &:focus {
         outline: none;
@@ -75,7 +75,7 @@ $ic-color-text: #455156;
   }
 }
 
-$icon-grid-size: 160px;
+icon-grid-size = 160px;
 .icon-grid {
   width: 100%;
   display: flex;
@@ -85,11 +85,11 @@ $icon-grid-size: 160px;
   align-content: flex-start;
   .grid-cell {
     display: block;
-    width: $icon-grid-size;
-    height: $icon-grid-size;
+    width: icon-grid-size;
+    height: icon-grid-size;
     margin: 10px;
-    flex: 1 0 $icon-grid-size;
-    max-width: $icon-grid-size;
+    flex: 1 0 icon-grid-size;
+    max-width: icon-grid-size;
   }
 }
 img {
