[I#1] Push notifications v0.1.0 - INPRGRSS

--- a/web/src/views/icon/icon-cell.styl
+++ b/web/src/views/icon/icon-cell.styl
@@ -2,42 +2,38 @@
 icon-preview-size = 50px;
 
 .icon-cell {
-    height: 100%;
-    text-align: center;
-    padding: 10px;
-    border-radius: 3px;
-    position: relative;
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
   .icon-preview {
     width: icon-preview-size;
     height: icon-preview-size;
-    // background-color: #CCC;
     margin: 0 auto;
     text-align: center;
-    margin-top: 40px;
   }
   .icon-name {
-    position: absolute;
-    font-family: "Roboto-Light";
-    bottom: 30px;
-    width: calc(100% - 2*10px);
-    text-align: center;
+		font-family: "Roboto-Light";
     font-size: 13px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
+    line-height: 1;
+    line-break: anywhere;
+    text-align: center;
+	}
   div.iconcell-control {
-        position: absolute;
-        top: 6px;
-        right: 9px;
-        opacity: 0;
-        transition: opacity 0.3s 0.1s cubic-bezier(0.4, 0.7, 0.99, 0.99), transform 0.2s ease-in-out;
-        &:hover {
-            transform: scale(2.0);
-        }
+		position: absolute;
+		top: 6px;
+		right: 9px;
+		opacity: 0;
+		transition: opacity 0.3s 0.1s cubic-bezier(0.4, 0.7, 0.99, 0.99), transform 0.2s ease-in-out;
+		&:hover {
+			transform: scale(2.0);
+		}
   }
   img {
-      transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;
+		width: 100%;
+		height: 100%;
   }
   &:hover {
     background-color: #F0F0F0;
@@ -45,7 +41,7 @@ icon-preview-size = 50px;
         opacity: 1;
     }
     img {
-      transform: scale(2.0);
-    }
+      transform: scale(3.0);
+		}
   }
 }
