--- a/web/src/views/layout-util.styl
+++ b/web/src/views/layout-util.styl
@@ -1,5 +1,9 @@
 .property-list {
-    td {
-        padding: 10px;
-    }
+	td {
+		padding: 10px;
+		
+		&.property-value {
+			width: 300px;
+		}
+	}
 }
