--- a/web/src/views/icon/icon-details-dialog.styl
+++ b/web/src/views/icon/icon-details-dialog.styl
@@ -1,8 +1,18 @@
+.icon-details-dialog {
 .properties-row {
     margin-top: 10px;
 }
 
-.title-bar {
+	.icon-box-row {
+    width: 500px;
+		
+    img {
+			padding: 20px;
+    }
+	}
+
+	.title-bar {
+    height: 50px;
     display: block;
     position: relative;
     .title-control {
@@ -20,28 +30,35 @@
     .delete-icon-button {
         right: 0px;
     }
-}
-.icon-preview-image {
+	}
+
+	.icon-preview-image {
     display: block;
-}
-.icon-name {
+	}
+
+	.icon-name {
     display: block;
     margin-top: 20px;
     font-size: 24px;
     text-align: center;
-}
-.properties-row {
+	}
+
+	.properties-row {
     padding: 0 20px;
-}
-.download_button {
+	}
+
+	.download_button {
     min-height: 36px;
     margin: 10px 0 30px;
-}
-.bg-purple-dark {
-    background: #99a9bf;
-}
+	}
 
-.dialog-footer-actions {
+	.bg-purple-dark {
+    background: #99a9bf;
+	}
+
+	.dialog-footer-actions {
     display: flex;
     justify-content: center;
+	}
+
 }
